# Robotics-RL

./: DISTANCE_FIELD_GRANULARITY.md  PARTICLE_CONVERGENCE_FIX_COMPLETE.md  README.md  WEIGHT_INVERSION_FIX.md  frames_2025-10-30_18.34.47.gv  frames_2025-11-09_18.17.03.gv  frames_2025-11-09_18.53.41.gv  frames_2025-11-09_20.45.07.gv  frames_2025-12-02_21.11.40.gv  gitignore  map.pgm  wf_qtable.npy
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/dynamixel_sdk/include/dynamixel_sdk/: dynamixel_sdk.h  group_bulk_read.h  group_bulk_write.h  group_fast_bulk_read.h  group_fast_sync_read.h  group_handler.h  group_sync_read.h  group_sync_write.h  packet_handler.h  port_handler.h  port_handler_arduino.h  port_handler_linux.h  port_handler_mac.h  port_handler_windows.h  protocol1_packet_handler.h  protocol2_packet_handler.h
install/dynamixel_sdk/share/dynamixel_sdk/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/dynamixel_sdk/share/dynamixel_sdk/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  dynamixel_sdkConfig-version.cmake  dynamixel_sdkConfig.cmake
install/dynamixel_sdk/share/dynamixel_sdk/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  dynamixel_sdk_custom_interfacesConfig-version.cmake  dynamixel_sdk_custom_interfacesConfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
install/dynamixel_sdk_custom_interfaces/share/dynamixel_sdk_custom_interfaces/msg/: SetPosition.idl  SetPosition.json  SetPosition.msg
install/dynamixel_sdk_examples/lib/dynamixel_sdk_examples/: read_write_node  read_write_node.py
install/dynamixel_sdk_examples/share/dynamixel_sdk_examples/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/turtlebot3/share/turtlebot3/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/turtlebot3_bringup/share/turtlebot3_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/turtlebot3_cartographer/share/turtlebot3_cartographer/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/turtlebot3_description/share/turtlebot3_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/turtlebot3_example/share/turtlebot3_example/: package.sh
install/turtlebot3_msgs/share/turtlebot3_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/turtlebot3_navigation2/share/turtlebot3_navigation2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/turtlebot3_node/lib/turtlebot3_node/: turtlebot3_ros
install/turtlebot3_node/share/turtlebot3_node/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/turtlebot3_teleop/share/turtlebot3_teleop/: package.sh
install/turtlesim/lib/turtlesim/: draw_square  mimic  turtle_teleop_key  turtlesim_node
install/turtlesim/share/turtlesim/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/wall_following_ros2/share/wall_following_ros2/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/wall_following_ros2/share/wall_following_ros2/launch/: wall_following.launch.py
log/: latest_build
src/particle-filter-ros2/: README.md  package.xml  setup.cfg  setup.py
src/particle-filter-ros2/config/: a_star.yaml  motion.yaml  pf.yaml  sensor.yaml
src/particle-filter-ros2/launch/: a_star_nav.launch.py  main.launch  models.launch.py  particle_filter.launch.py
src/particle-filter-ros2/maps/: distance_field.npy  likelihood_field.npy  likelihood_field_distance.npy  likelihood_field_metadata.yaml  map.yaml  map_metadata.yaml
src/particle-filter-ros2/resource/: particle-filter-ros2
src/particle-filter-ros2/scripts/: check_distance_field_axes.py  check_laser_frame.py  check_resampling.py  debug_sensor_model.py  diagnose_coordinates.py  diagnose_heading.py  generate_distance_field.py  pf_diagnostic.py
src/particle-filter-ros2/src/particle_filter_ros2/: a_star_planner.py  motion_model.py  particle_filter.py  sensor_model.py  set_gz_pose.py
src/wall_following_ros2/: CMakeLists.txt  README.md
src/wall_following_ros2/config/: cartographer_robot1.lua  cartographer_robot2.lua
src/wall_following_ros2/launch/: multi_robot_slam.launch.py  two_robot_cartographer_map_merge.launch.py  two_robot_sarsa_with_cartographer.launch.py  wall_following.launch.py  wall_following_with_cartographer.launch.py
src/wall_following_ros2/scripts/: plot_rewards.py
src/wall_following_ros2/src/: q_td_run.py  q_td_train.py  sarsa_run.py  sarsa_train.py  wall_follower_agent.py
(+414 files in other folders)
