<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>particle-filter-ros2</name>
  <version>0.1.0</version>
  <description>
    CSC 591 Project 3 Deliverable 1: motion and sensor models for particle-filter localization.
    After untarring into the root of a ROS 2 workspace, run `colcon build --packages-select particle-filter-ros2`,
    source `install/setup.bash`, then launch the full Gazebo demonstration with
    `ros2 launch particle-filter-ros2 main.launch` (spawns TurtleBot3 house world and both nodes) or launch only the
    motion/sensor nodes via `ros2 launch particle-filter-ros2 models.launch.py`. This package is adapted from the
    course starter repository (peng-lab/particle-filter-ros2) with project-specific modifications.
  </description>
  <maintainer email="aaphatak@ncsu.edu">Ashwattha Phatak</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
