<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wall_following_ros2</name>
  <version>0.0.0</version>
  <description>
    Wall following bot package. Place this in your ros_ws/src/ folder, 
    run `colcon build` from ros_ws, and then 
    `ros2 launch wall_following_ros2 wall_following.launch.py`. 
    Gazebo and RViz will open, and the turtlebot will follow the right-most wall 
    in the maze. Default spawn point is bottom-right of the maze.
  </description>

  <maintainer email="aaphatak@ncsu.edu">Ashwattha Phatak</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>turtlebot3_gazebo</depend>
  <depend>turtlebot3_navigation2</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
